--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
       <a-entity id="chandelier" position="0 4.5 -2.5"></a-entity>
       <a-sphere radius="0.3" color="#FFD700" material="metalness: 1; roughness: 0; emissive: #FFEEAA; emissiveIntensity: 0.5"></a-sphere>
       <a-sky color="#DDDDDD"></a-sky>
-      <a-entity gltf-model="" position="-4.02921 0.05051 -0.20819" rotation="0 0 0" scale="1.2 1.2 1.2" id="A-ENTITY-10"></a-entity>
+      <a-entity gltf-model="url(https://unpkg.com/@softeng-761-2025-team-10/aframe-inspector/assets/gltf/cesium_milk_truck.glb)" position="0.85976 0.05051 -0.20819" rotation="0 0 0" scale="1.2 1.2 1.2" id="A-ENTITY-10"></a-entity>
+      <a-entity gltf-model="https://unpkg.com/@softeng-761-2025-team-10/aframe-inspector/assets/gltf/cesium_milk_truck.glb" position="-4.02921 0.05051 -0.20819" scale="1.2 1.2 1.2" id="ENTITY-10"></a-entity>
 			<a-plane
 				id="ground"
 				position="0 0 -4"
