--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
       <a-entity id="frame2" position="0 2.5 -4.9" visible=""></a-entity>
       <a-plane width="1.8" height="1.8" color="#8B4513" material="roughness: 0.6"></a-plane>
       <a-plane width="1.5" height="1.5" position="0 0 0.01" color="#4444FF" animation="property: material.color; from: #4444FF; to: #44FFFF; loop: true; dur: 4000; dir: alternate; easing: easeInOutSine"></a-plane>
-      <a-entity id="frame3" position="3 2.5 -4.9"></a-entity>
+      <a-entity id="frame3" position="3 2.5 -4.9" visible=""></a-entity>
       <a-plane width="1.8" height="1.8" color="#8B4513" material="roughness: 0.6"></a-plane>
       <a-plane width="1.5" height="1.5" position="0 0 0.01" color="#44FF44" animation="property: material.color; from: #44FF44; to: #88FF88; loop: true; dur: 3500; dir: alternate; easing: easeInOutSine"></a-plane>
-      <a-entity id="sculpture1" position="-3 0 -2"></a-entity>
+      <a-entity id="sculpture1" position="-3 0 -2" visible=""></a-entity>
       <a-cylinder position="0 0.5 0" radius="0.4" height="1" color="#CCCCCC" material="metalness: 0.2; roughness: 0.8"></a-cylinder>
       <a-box position="0 1.5 0" width="0.6" height="0.6" depth="0.6" color="#FFD700" animation="property: rotation; to: 0 360 360; loop: true; dur: 8000; easing: linear" material="metalness: 0.9; roughness: 0.1"></a-box>
-      <a-entity id="sculpture2" position="0 0 -1"></a-entity>
+      <a-entity id="sculpture2" position="0 0 -1" visible=""></a-entity>
       <a-cylinder position="0 0.5 0" radius="0.4" height="1" color="#CCCCCC" material="metalness: 0.2; roughness: 0.8"></a-cylinder>
       <a-sphere position="0 1.8 0" radius="0.4" color="#FF69B4" animation="property: position; to: 0 2.2 0; loop: true; dir: alternate; dur: 2000; easing: easeInOutSine" material="metalness: 0.7; roughness: 0.3"></a-sphere>
       <a-entity id="sculpture3" position="3 0 -2"></a-entity>
